@@ -1,3 +1,10 @@
+2005-03-28  Ben Maurer  <bmaurer@ximian.com>
+
+	* ProfileReader.cs: Read summarized data.
+
+	* TypeGraphPlotter.cs: Rather than rely on reading the profile in
+	one gulp, use the summarized data.
+
 2005-02-19  Ben Maurer  <bmaurer@ximian.com>
 
 	* TypeGraphPlotter.cs:
