@@ -1,3 +1,7 @@
+2005-03-28  Ben Maurer  <bmaurer@ximian.com>
+
+	* gc-profiler.c: Write out summarized type allocation data.
+
 2005-01-24  Ben Maurer  <bmaurer@ximian.com>
 
 	* gc-profiler.c: Update after lupus's runtime changes.
